--- a/web/views/vaga/painel_n.phtml
+++ b/web/views/vaga/painel_n.phtml
@@ -215,15 +215,24 @@ if ($hasMaxSalario) {
         </div>
         <div class="flex flex-col gap-4 md:col-span-3 xl:col-span-5">
             <?php if (!empty($filtros_badges)) : ?>
-                <div class="flex gap-2">
+                <div class="flex flex-wrap gap-2">
                     <span>Filtrado por:</span>
                     <?php foreach ($filtros_badges as $badge) : ?>
                         <div class="badge badge-primary badge-outline"><?= $badge ?></div>
                     <?php endforeach; ?>
                 </div>
+            <?php endif;
+            if (empty($vagas)) : ?>
+                <div role="alert" class="flex alert alert-warning">
+                    <svg class="w-5 h-5" data-slot="icon" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path clip-rule="evenodd" d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12Zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042-.02a.75.75 0 0 1 .67 1.34l-.04.022c-1.147.573-2.438-.463-2.127-1.706l.71-2.836-.042.02a.75.75 0 1 1-.671-1.34l.041-.022ZM12 9a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z" fill-rule="evenodd"></path>
+                    </svg>
+                    <span>Nenhuma vaga encontrada.</span>
+                </div>
             <?php endif; ?>
             <div class="grid xl:grid-cols-2 gap-x-4 gap-y-8 max-w-screen-lg w-full">
-                <?php foreach ($vagas as $vaga) :
+                <?php
+                foreach ($vagas as $vaga) :
                     echo $vaga->renderCardJob();
                 endforeach; ?>
             </div>
